<resources>
    <string name="app_name">YELPFusion</string>
    <string name="business_name">business name</string>
    <string name="business_categories">business categories</string>
    <string name="business_location">business location</string>
    <string name="rating_example">4.5/5</string>
    <string name="url">URL</string>
    <string name="review_count_example">5234</string>
    <string name="api_key">rcZTLdXbUfdghaFUQu-On0AlNdn3_zfV4EMd1_UkVizGgfVcrW49lljmumdgbhFNFE46p7DJJW6m--H0QSXq67uH5-kUDowWzgY72V1hQcV9f5JwRVGUJGSGG1CKXnYx</string>
</resources>
