<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/businessItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/businessImage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:clickable="true"
                android:focusable="true"
                android:adjustViewBounds="true"/>
            <LinearLayout
                android:id="@+id/businessInfoLayout"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/businessNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/business_name"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/businessCategoriesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/business_categories"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/businessLocationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:hint="@string/business_location"
                    android:layout_marginTop="5dp"/>
                <LinearLayout
                    android:id="@+id/businessReviewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:maxHeight="30dp"/>
                    <TextView
                        android:id="@+id/businessRating"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:hint="@string/rating_example"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/businessURL"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:text="@string/url"
                        android:focusable="true"
                        android:textStyle="italic"
                        android:clickable="true"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/businessReviewCount"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/review_count_example"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>